2005-06-22  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/ttf.cc (print_header): new file. Convert to type42, using
	FreeType to parse the TTF. 

	* ttftool/parse.c (readPostTable): ugh. Kludge: nglyphs in maxp
	and post table may differ. Pass around post_nglyphs as well.

2005-06-20  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* ly/music-functions-init.ly (musicMap): new music function
	musicMap. 
	
2005-06-19  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* make/mutopia-rules.make: anti-alias-factor = 2

	* scm/ps-to-png.scm (make-ps-images): cleanup multipage vs. single
	page switch.

	* make/lilypond-vars.make (LILYPOND_BOOK_FLAGS): set
	anti-alias-factor for lilypond-book runs.

	* scm/ps-to-png.scm (scale-down-image): new function.
	(my-system): new function.
	(make-ps-images): blow up GS resolution by anti-alias-factor,
	scale down image by anti-alias-factor.  This improves appearance
	of bitmaps
	(make-ps-images): remove showpage. Fixes spurious empty png at
	end.

	* scm/framework-ps.scm (write-preamble): downcase filename before
	string-matching. Should fix .TTF files (as opposed to ttf files)  

	* Documentation/user/tutorial.itely (Running LilyPond for the
	first time): separate subsections for windows, macos and unix.  

	* Documentation/user/invoking.itely (Updating files with
	convert-ly): add MacOS X note.

2005-06-18  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* Documentation/user/introduction.itely (Engraving): don't include
	file optical-spacing, add directly.

	* lily/paper-outputter.cc (file): open file in binary mode. This
	fixes OTF embedding on windows.

2005-06-17  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/framework-ps.scm (write-preamble): remove debugging output.

	* mf/aybabtu.pe.in (i): don't generate aybabtu.cff

	* mf/GNUmakefile ($(outdir)/fonts.cache-1): create font cache for
	outdir.
	(install-fc-cache): install font cache in installation directories.

2005-06-17  Jan Nieuwenhuizen  <janneke@gnu.org>
